# QuizlerEnterprise

./: .code-workspace  .env.example  .gitignore  Cargo.toml  README.md  compose.yml  package.json
services/: LAYOUT.md
services/backend/main-node/: Cargo.toml  README.md
services/backend/main-node/src/: main.rs
services/backend/main-node/src/database/: mod.rs
services/backend/main-node/src/database/entities/: mod.rs  quiz.rs  resource.rs  user.rs  user_link.rs  user_refresh_token.rs
services/backend/main-node/src/database/repositories/: user.rs
services/backend/main-node/src/http/: mod.rs
services/backend/main-node/src/http/middleware/: auth.rs  json.rs  mod.rs  recaptcha.rs
services/backend/main-node/src/http/models/: auth.rs  error.rs  mod.rs  quiz.rs
services/backend/main-node/src/http/routes/: auth.rs  mod.rs  quiz.rs  user.rs
services/backend/main-node/src/services/: auth.rs  authentication.rs
services/backend/main-node/src/utils/: assert.rs  env.rs  hashing.rs  mod.rs  tracing.rs  types.rs
services/backend/main-node/templates/mail/: forgot_password.stpl  verify_email.stpl
services/backend/migration/src/: lib.rs  m20240128_142240_create_quiz_table.rs  m20240128_142246_create_users_table.rs  m20240130_124944_create_user_links_table.rs  m20240130_140620_create_user_refresh_tokens_table.rs  m20240207_233443_create_resource_table.rs
services/backend/play-node/: Cargo.toml  README.md
services/database/: Dockerfile
services/frontend/hub/: .env.example  .eslintrc.cjs  package-lock.json  package.json  vite.config.ts
services/frontend/hub/src/: app.d.ts
services/frontend/hub/src/lib/: error.ts  paths.ts
services/frontend/hub/src/lib/api/: api.ts  auth.ts  quiz.ts  user.ts
services/frontend/hub/src/lib/assets/: global.scss  theme.scss
services/frontend/hub/src/lib/components/: Captcha.svelte  CaptchaContext.svelte  ErrorBoundary.ts  FinishAccountSetup.svelte  GoogleAuthButton.svelte  Header.svelte  Loader.svelte  MicrosoftAuthButton.svelte  Modal.svelte  RequireAuth.svelte  Sidebar.svelte  UploadDialog.svelte
services/frontend/hub/src/lib/components/auth/: AuthProviderButton.svelte  AuthProviders.svelte
services/frontend/hub/src/lib/components/auth/button/: GoogleAuthButton.svelte  MicrosoftAuthButton.svelte
services/frontend/hub/src/lib/components/icons/: Create.svelte  Edit.svelte  Globe.svelte  GoogleIcon.svelte  Home.svelte  Library.svelte  LineChart.svelte  Logo.svelte  Logout.svelte  MicrosoftIcon.svelte  Trash.svelte
services/frontend/hub/src/lib/components/input/: TextInput.svelte
services/frontend/hub/src/lib/stores/: auth.ts  files.ts  form.ts
services/frontend/hub/src/routes/: +layout.svelte
services/frontend/hub/src/routes/(authorized)/: +layout.svelte
services/frontend/hub/src/routes/(authorized)/(dashboard)/: +layout.svelte  +page.svelte
services/frontend/hub/src/routes/(authorized)/create/(setup)/: +page.svelte
services/frontend/hub/src/routes/(authorized)/create/[quiz]/: +page.svelte
services/frontend/hub/src/routes/(authorized)/creator/: +page.svelte
services/frontend/hub/src/routes/auth/login/: +page.svelte
services/frontend/hub/src/routes/auth/openid/complete/: +page.svelte
services/frontend/hub/src/routes/auth/openid/finish/: +page.svelte
services/frontend/hub/src/routes/auth/register/: +page.svelte
services/frontend/hub/src/routes/dashboard/: +layout.svelte
services/frontend/hub/src/routes/error/: +page.svelte
services/frontend/hub/src/routes/register/: +page.svelte
services/frontend/play/: package.json
services/tracing/: collector.Dockerfile  query.Dockerfile
