[workspace]
members = ["./services/backend/main-node", "./services/backend/play-node"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Jacobtread (jacobtread@gmail.com)"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "tracing"] }

# Tracing & Logging
tracing = "0.1"
tracing-subscriber = "0.3"
log-panics = { version = "2", features = ["with-backtrace"] }

# Tracing OpenTelemetry
opentelemetry = "0.21.0"
tracing-opentelemetry = "0.22.0"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = [] }

# HTTP 
axum = { version = "0.7", features = ["multipart", "ws"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }

# Environment configuration
dotenvy = "0.15"

# Error handling
thiserror = "1"
anyhow = "1"
