[package]
name = "main-node"
version = "0.1.0"
edition = "2021"
authors = ["Jacobtread (jacobtread@gmail.com)"]

[dependencies]
tokio = { version = "1", features = ["full", "tracing"] }

# Tracing & Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log-panics = { version = "2", features = ["with-backtrace"] }

# Tracing OpenTelemetry
opentelemetry = "0.21.0"
tracing-opentelemetry = "0.22.0"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = [] }

# HTTP 
axum = { version = "0.7", features = ["multipart", "ws"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }

# Environment configuration
dotenvy = "0.15"

# Error handling
thiserror = "1"
anyhow = "1"

sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
] } # Database

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

# Future utilities
futures = "0.3"

# Time and date 
chrono = "0.4"

# JWT Tokens
jsonwebtoken = "9"

# HTTP Client 
reqwest = { version = "0.11", features = ["json"] }

# Emailing 
lettre = { version = "0.11", features = ["tokio1-native-tls"] }

# Password hashing
argon2 = "0.5"

# Templating
sailfish = "0.8"

# Validation
validator = { version = "0.16", features = ["derive"] }

async-trait = "0.1"

moka = { version = "0.12", features = ["future"] }

openid = "0.12"

strum = { version = "0.26", features = ["derive"] }
